--- a/more.html
+++ b/more.html
@@ -40,6 +40,92 @@
         <div class="header__column"><i class="fa fa-cog fa-lg"></i></div>
       </div>
     </header>
+    <main class="more">
+      <header class="more__header">
+        <div class="more-header__column">
+          <img src="images/avatar.jpg" alt="" />
+          <div class="more-header__info">
+            <h3 class="more-header__title">Nicolas</h3>
+            <span class="more-header__subtitle"> itnicolasme@gmail.com </span>
+          </div>
+        </div>
+        <fa class="fa fa-comment-alt fa-2x"></fa>
+      </header>
+      <section class="more__options">
+        <div class="more__option">
+          <i class="fa fa-grin fa-2x"></i
+          ><span class="more__option-title">Emoticons</span>
+        </div>
+        <div class="more__option">
+          <i class="fa fa-paint-brush fa-2x"></i
+          ><span class="more__option-title">Themes</span>
+        </div>
+        <div class="more__option">
+          <i class="fa fa-hand-peace fa-2x"></i
+          ><span class="more__option-title">Plus Friend</span>
+        </div>
+        <div class="more__option">
+          <i class="fa fa-user-circle fa-2x"></i
+          ><span class="more__option-title">Account</span>
+        </div>
+      </section>
+      <section class="more__plus-friends">
+        <header class="plus-friends__header">
+          <h2 class="plus-friends__title">Plus Friends</h2>
+          <span class="plus-friends__learn-more">
+            <i class="fa fa-info-circle"></i> Learn More
+          </span>
+        </header>
+        <div class="plus-friends__items">
+          <div class="plus-frends__item-title">
+            <i class="fa fa-utensils"></i
+            ><span class="plus-friends__item">Order</span>
+          </div>
+          <div class="plus-frends__item-title">
+            <i class="fa fa-home"></i
+            ><span class="plus-friends__item">Store</span>
+          </div>
+          <div class="plus-frends__item-title">
+            <i class="fa fa-tv"></i
+            ><span class="plus-friends__item">TV Channel/Radio</span>
+          </div>
+          <div class="plus-frends__item-title">
+            <i class="fa fa-pencil-alt"></i
+            ><span class="plus-friends__item">Creation</span>
+          </div>
+          <div class="plus-frends__item-title">
+            <i class="fa fa-graduation-cap"></i
+            ><span class="plus-friends__item">Education</span>
+          </div>
+          <div class="plus-frends__item-title">
+            <i class="fa fa-university"></i
+            ><span class="plus-friends__item">Politics/Society</span>
+          </div>
+          <div class="plus-frends__item-title">
+            <i class="fa fa-won-sign"></i
+            ><span class="plus-friends__item">Finance</span>
+          </div>
+          <div class="plus-frends__item-title">
+            <i class="fa fa-video"></i
+            ><span class="plus-friends__item">Movies</span>
+          </div>
+        </div>
+      </section>
+      <section class="more__options">
+        <div class="more__option">
+          <img src="images/common.jpg" alt="" class="more__options-image" />
+          <span class="more__options-title">KaKao Story</span>
+        </div>
+        <div class="more__option">
+          <img src="images/ads.JPG" alt="" class="more__options-image" />
+          <span class="more__options-title">Path</span>
+        </div>
+        <div class="more__option">
+          <img src="images/path.JPG" alt="" class="more__options-image" />
+          <span class="more__options-title">KaKao friends</span>
+        </div>
+      </section>
+    </main>
     <nav class="tab-bar">
       <a href="index.html" class="tab-bar__tab">
         <i class="fa fa-user"></i><span class="tab-bar__titl">Friends</span></a
