--- a/chat.html
+++ b/chat.html
@@ -44,5 +44,29 @@
         </div>
       </div>
     </header>
+    <main class="chat">
+      <div class="date-divider-text">
+        <span class="date-divider__text">Mednesday, August 2, 2017</span>
+      </div>
+      <div class="chat__message chat__message--from-me">
+        <span class="chat__message-time">17:55</span>
+        <span class="chat__message-body">Hello! This is a test message.</span>
+      </div>
+      <div class="chat__message chat__message--to">
+        <img src="images/rudehd.JPG" alt="" class="chat__message-avatar" />
+        <div class="chat__message-center">
+          <h3 class="chat__message-username">LYNN</h3>
+          <span class="chat__message-body">And this is an answer</span>
+        </div>
+        <span class="chat__message-time">19:35</span>
+      </div>
+      <div class="type-message">
+        <i class="fa fa-plus fa-2x"></i>
+        <div class="type-message__input">
+          <input type="text" /> <i class="fa fa-smile"></i>
+          <span class="record-message"> <i class="fa fa-microphone"></i> </span>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
