--- a/chats.html
+++ b/chats.html
@@ -51,18 +51,21 @@
       </div>
       <ul class="chats__list">
         <li class="chats__chat">
-          <div class="chat__content">
-            <img src="" alt="" />
-            <div class="chat__preview">
-              <h3 class="chat__user">Lynn</h3>
-              <span class="chat__last-message"
-                >Hello! This is a test message!</span
-              >
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">Lynn</h3>
+                <span class="chat__last-message"
+                  >Hello! This is a test message!</span
+                >
+              </div>
             </div>
-          </div>
-          <div class="chat__date-time">15:55</div>
+            <span class="chat__date-time">15:55 </span>
+          </a>
         </li>
         <li class="chats__chat">
+          <a href="chat.html">
           <div class="chat__content">
             <img src="" alt="" />
             <div class="chat__preview">
@@ -72,8 +75,9 @@
               >
             </div>
           </div>
-          <div class="chat__date-time">July 29</div>
+          <span class="chat__date-time">July 29</span>
         </li>
+      </a>
       </ul>
       <div class="chat-btn"><i class="fa fa-comment"></i></div>
     </main>
