chat back link done

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
           </header>
           <div class="friends__section-rows">
             <div class="friends__section-row">
-              <img src="" alt="" />
-              <span class="friends__section-name">Nicolas</span>
+              <a href="profile.html">
+                <img src="images/rudehd.JPG" alt="" />
+
+                <span class="friends__section-name">Nicolas</span>
+              </a>
             </div>
             <div class="friends__section-row">
               <img src="" alt="" />
@@ -73,7 +76,7 @@
             <div class="friends__section-rows">
               <div class="friends__section-row">
                 <div class="friends_section-column">
-                  <img src="" alt="" />
+                  <img src="images/rlqhs.JPG" alt="" />
                   <span class="friends__section-name">LYNN</span>
                 </div>
                 <span class="friends__section-tagLine">
