--- a/profile.html
+++ b/profile.html
@@ -35,10 +35,34 @@
         </div>
       </div>
       <div class="header__bottom">
-        <div class="header__column"><i class="fa fa-times fa-lg"></i></div>
+        <div class="header__column">
+          <a href="index.html"><i class="fa fa-times fa-lg"></i></a>
+        </div>
+
         <div class="header__column"></div>
         <div class="header__column"><i class="fa fa-user fa-lg"></i></div>
       </div>
     </header>
+    <main class="profile">
+      <header class="profile__header">
+        <img src="images/rudehd.JPG" alt="" />
+        <h3 class="body-name">rudehd</h3>
+      </header>
+      <input type="text" placeholder="tongher1685@gmail.com" />
+      <div class="profile__actions">
+        <div class="profile__action">
+          <span class="profile__action-circle">
+            <i class="fa fa-comment fa-2x"></i>
+          </span>
+          <span class="profile__action-title">MyChatroom</span>
+        </div>
+        <div class="profile__action">
+          <span class="profile__action-circle">
+            <i class="fa fa-pencil-alt fa-2x"></i>
+          </span>
+          <span class="profile__action-title">Edit Profile</span>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
