--- a/chat.html
+++ b/chat.html
@@ -11,9 +11,10 @@
       crossorigin="anonymous"
     />
     <title>Friend</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <header>
+  <body class="body-chat">
+    <header class="top-header chat-header">
       <div class="header__top">
         <div class="header__column">
           <!-- plane icon -->
@@ -45,7 +46,7 @@
       </div>
     </header>
     <main class="chat">
-      <div class="date-divider-text">
+      <div class="date-divider">
         <span class="date-divider__text">Mednesday, August 2, 2017</span>
       </div>
       <div class="chat__message chat__message--from-me">
@@ -61,10 +62,12 @@
         <span class="chat__message-time">19:35</span>
       </div>
       <div class="type-message">
-        <i class="fa fa-plus fa-2x"></i>
+        <i class="fa fa-plus fa-lg"></i>
         <div class="type-message__input">
-          <input type="text" /> <i class="fa fa-smile"></i>
-          <span class="record-message"> <i class="fa fa-microphone"></i> </span>
+          <input type="text" /> <i class="fa fa-smile fa-lg"></i>
+          <span class="record-message">
+            <i class="fa fa-microphone fa-lg"></i>
+          </span>
         </div>
       </div>
     </main>
