--- a/find.html
+++ b/find.html
@@ -11,9 +11,9 @@
       crossorigin="anonymous"
     />
     <title>Find</title>
-  </head>
+        <link rel="stylesheet" href="css/style.css">
   <body>
-    <header>
+    <header class="top-header">
       <div class="header__top">
         <div class="header__column">
           <!-- plane icon -->
@@ -42,19 +42,19 @@
     </header>
     <main class="find">
       <section class="find__options">
-        <div class="find__options">
+        <div class="find__option">
           <i class="fa fa-address-book fa-lg"></i
           ><span class="find__option-title">Find </span>
         </div>
-        <div class="find__options">
+        <div class="find__option">
           <i class="fa fa-qrcode fa-lg"></i
           ><span class="find__option-title">QR code </span>
         </div>
-        <div class="find__options">
+        <div class="find__option">
           <i class="fa fa-mobile fa-lg"></i
           ><span class="find__option-title">Shake </span>
         </div>
-        <div class="find__options">
+        <div class="find__option">
           <i class="fa fa-envelope fa-lg"></i
           ><span class="find__option-title">Invite via SMS </span>
         </div>
@@ -70,7 +70,7 @@
     </main>
     <nav class="tab-bar">
       <a href="index.html" class="tab-bar__tab">
-        <i class="fa fa-user"></i><span class="tab-bar__titl">Friends</span></a
+        <i class="fa fa-user"></i><span class="tab-bar__title">Friends</span></a
       >
       <a href="chats.html" class="tab-bar__tab"
         ><i class="fa fa-comment"></i
