--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       crossorigin="anonymous"
     />
     <title>Friends</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="top-header">
       <div class="header__top">
         <div class="header__column">
           <!-- plane icon -->
@@ -58,14 +59,11 @@
           </header>
           <div class="friends__section-rows">
             <div class="friends__section-row">
-              <a href="profile.html">
-                <img src="images/rudehd.JPG" alt="" />
-
-                <span class="friends__section-name">Nicolas</span>
-              </a>
+              <img src="images/rudehd.JPG" alt="" />
+              <a href="profile.html" class="friends__section-name"> 경동 </a>
             </div>
             <div class="friends__section-row">
-              <img src="" alt="" />
+              <img src="images/rlqhs.JPG" alt="" />
               <span class="friends__section-name">Friends' Names Display</span>
             </div>
           </div>
@@ -73,24 +71,24 @@
         <section class="friends__section">
           <header class="friends__section-header">
             <h6 class="friends__section-title">Friends</h6>
-            <div class="friends__section-rows">
-              <div class="friends__section-row">
-                <div class="friends_section-column">
-                  <img src="images/rlqhs.JPG" alt="" />
-                  <span class="friends__section-name">LYNN</span>
-                </div>
-                <span class="friends__section-tagLine">
-                  Life is short. So live your life.
-                </span>
-              </div>
-            </div>
           </header>
+          <div class="friends__section-rows">
+            <div class="friends__section-row with-tagline">
+              <div class="friends_section-column">
+                <img src="images/rlqhs.JPG" alt="" />
+                <span class="friends__section-name">LYNN</span>
+              </div>
+              <span class="friends__section-tagLine">
+                Life is short. So live your life.
+              </span>
+            </div>
+          </div>
         </section>
       </div>
     </main>
     <nav class="tab-bar">
       <a href="index.html" class="tab-bar__tab tab-bar__tab--selected">
-        <i class="fa fa-user"></i><span class="tab-bar__titl">Friends</span></a
+        <i class="fa fa-user"></i><span class="tab-bar__title">Friends</span></a
       >
       <a href="chats.html" class="tab-bar__tab"
         ><i class="fa fa-comment"></i
