--- a/chats.html
+++ b/chats.html
@@ -11,9 +11,10 @@
       crossorigin="anonymous"
     />
     <title>Chats</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="top-header">
       <div class="header__top">
         <div class="header__column">
           <!-- plane icon -->
@@ -53,7 +54,7 @@
         <li class="chats__chat">
           <a href="chat.html">
             <div class="chat__content">
-              <img src="" alt="" />
+              <img src="images/rudehd.JPG" alt="" />
               <div class="chat__preview">
                 <h3 class="chat__user">Lynn</h3>
                 <span class="chat__last-message"
@@ -66,24 +67,122 @@
         </li>
         <li class="chats__chat">
           <a href="chat.html">
-          <div class="chat__content">
-            <img src="" alt="" />
-            <div class="chat__preview">
-              <h3 class="chat__user">KaKaoTalk</h3>
-              <span class="chat__last-message"
-                >You logged into KakaoTalk PC</span
-              >
+            <div class="chat__content">
+              <img src="images/kakao.JPG" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">KaKaoTalk</h3>
+                <span class="chat__last-message"
+                  >You logged into KakaoTalk PC</span
+                >
+              </div>
             </div>
-          </div>
-          <span class="chat__date-time">July 29</span>
+            <span class="chat__date-time">July 29</span>
+          </a>
         </li>
-      </a>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/rudehd.JPG" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">Lynn</h3>
+                <span class="chat__last-message"
+                  >Hello! This is a test message!</span
+                >
+              </div>
+            </div>
+            <span class="chat__date-time">15:55 </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/rudehd.JPG" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">Lynn</h3>
+                <span class="chat__last-message"
+                  >Hello! This is a test message!</span
+                >
+              </div>
+            </div>
+            <span class="chat__date-time">15:55 </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/rudehd.JPG" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">경동</h3>
+                <span class="chat__last-message"
+                  >Hello! This is a test message!</span
+                >
+              </div>
+            </div>
+            <span class="chat__date-time">15:55 </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/rudehd.JPG" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">택병</h3>
+                <span class="chat__last-message"
+                  >Hello! This is a test message!</span
+                >
+              </div>
+            </div>
+            <span class="chat__date-time">15:55 </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/rudehd.JPG" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">Lynn</h3>
+                <span class="chat__last-message"
+                  >Hello! This is a test message!</span
+                >
+              </div>
+            </div>
+            <span class="chat__date-time">15:55 </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/rudehd.JPG" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">Lynn</h3>
+                <span class="chat__last-message"
+                  >Hello! This is a test message!</span
+                >
+              </div>
+            </div>
+            <span class="chat__date-time">15:55 </span>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/rudehd.JPG" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">Lynn</h3>
+                <span class="chat__last-message"
+                  >Hello! This is a test message!</span
+                >
+              </div>
+            </div>
+            <span class="chat__date-time">15:55 </span>
+          </a>
+        </li>
       </ul>
       <div class="chat-btn"><i class="fa fa-comment"></i></div>
     </main>
     <nav class="tab-bar">
       <a href="index.html" class="tab-bar__tab">
-        <i class="fa fa-user"></i><span class="tab-bar__titl">Friends</span></a
+        <i class="fa fa-user"></i><span class="tab-bar__title">Friends</span></a
       >
       <a href="chats.html" class="tab-bar__tab tab-bar__tab--selected"
         ><i class="fa fa-comment"></i
