--- a/more.html
+++ b/more.html
@@ -11,9 +11,10 @@
       crossorigin="anonymous"
     />
     <title>More</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="top-header">
       <div class="header__top">
         <div class="header__column">
           <!-- plane icon -->
@@ -43,13 +44,13 @@
     <main class="more">
       <header class="more__header">
         <div class="more-header__column">
-          <img src="images/avatar.jpg" alt="" />
+          <img src="images/rlqhs.JPG" alt="" />
           <div class="more-header__info">
             <h3 class="more-header__title">Nicolas</h3>
             <span class="more-header__subtitle"> itnicolasme@gmail.com </span>
           </div>
         </div>
-        <fa class="fa fa-comment-alt fa-2x"></fa>
+        <i class="fa fa-comment-alt fa-2x"></i>
       </header>
       <section class="more__options">
         <div class="more__option">
@@ -77,41 +78,41 @@
           </span>
         </header>
         <div class="plus-friends__items">
-          <div class="plus-frends__item-title">
+          <div class="plus-friends__item">
             <i class="fa fa-utensils"></i
-            ><span class="plus-friends__item">Order</span>
+            ><span class="plus-friends__item-title">Order</span>
           </div>
-          <div class="plus-frends__item-title">
+          <div class="plus-friends__item">
             <i class="fa fa-home"></i
-            ><span class="plus-friends__item">Store</span>
+            ><span class="plus-friends__item-title">Store</span>
           </div>
-          <div class="plus-frends__item-title">
+          <div class="plus-friends__item">
             <i class="fa fa-tv"></i
-            ><span class="plus-friends__item">TV Channel/Radio</span>
+            ><span class="plus-friends__item-title">TV Channel/Radio</span>
           </div>
-          <div class="plus-frends__item-title">
+          <div class="plus-friends__item">
             <i class="fa fa-pencil-alt"></i
-            ><span class="plus-friends__item">Creation</span>
+            ><span class="plus-friends__item-title">Creation</span>
           </div>
-          <div class="plus-frends__item-title">
+          <div class="plus-friends__item">
             <i class="fa fa-graduation-cap"></i
-            ><span class="plus-friends__item">Education</span>
+            ><span class="plus-friends__item-title">Education</span>
           </div>
-          <div class="plus-frends__item-title">
+          <div class="plus-friends__item">
             <i class="fa fa-university"></i
-            ><span class="plus-friends__item">Politics/Society</span>
+            ><span class="plus-friends__item-title">Politics/Society</span>
           </div>
-          <div class="plus-frends__item-title">
+          <div class="plus-friends__item">
             <i class="fa fa-won-sign"></i
-            ><span class="plus-friends__item">Finance</span>
+            ><span class="plus-friends__item-title">Finance</span>
           </div>
-          <div class="plus-frends__item-title">
+          <div class="plus-friends__item">
             <i class="fa fa-video"></i
-            ><span class="plus-friends__item">Movies</span>
+            ><span class="plus-friends__item-title">Movies</span>
           </div>
         </div>
       </section>
-      <section class="more__options">
+      <section class="more__links">
         <div class="more__option">
           <img src="images/common.jpg" alt="" class="more__options-image" />
           <span class="more__options-title">KaKao Story</span>
@@ -128,7 +129,7 @@
     </main>
     <nav class="tab-bar">
       <a href="index.html" class="tab-bar__tab">
-        <i class="fa fa-user"></i><span class="tab-bar__titl">Friends</span></a
+        <i class="fa fa-user"></i><span class="tab-bar__title">Friends</span></a
       >
       <a href="chats.html" class="tab-bar__tab"
         ><i class="fa fa-comment"></i
