--- a/profile.html
+++ b/profile.html
@@ -11,9 +11,10 @@
       crossorigin="anonymous"
     />
     <title>profile</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="top-header top-header--transparent">
       <div class="header__top">
         <div class="header__column">
           <!-- plane icon -->
@@ -45,22 +46,26 @@
     </header>
     <main class="profile">
       <header class="profile__header">
-        <img src="images/rudehd.JPG" alt="" />
-        <h3 class="body-name">rudehd</h3>
-      </header>
-      <input type="text" placeholder="tongher1685@gmail.com" />
-      <div class="profile__actions">
-        <div class="profile__action">
-          <span class="profile__action-circle">
-            <i class="fa fa-comment fa-2x"></i>
-          </span>
-          <span class="profile__action-title">MyChatroom</span>
+        <div class="profile__header-container">
+          <img src="images/rudehd.JPG" alt="" />
+          <h3 class="body-name">경동</h3>
         </div>
-        <div class="profile__action">
-          <span class="profile__action-circle">
-            <i class="fa fa-pencil-alt fa-2x"></i>
-          </span>
-          <span class="profile__action-title">Edit Profile</span>
+      </header>
+      <div class="profile__container">
+        <input type="text" placeholder="tongher1685@gmail.com" />
+        <div class="profile__actions">
+          <div class="profile__action">
+            <span class="profile__action-circle">
+              <i class="fa fa-comment fa-lg"></i>
+            </span>
+            <span class="profile__action-title">MyChatroom</span>
+          </div>
+          <div class="profile__action">
+            <span class="profile__action-circle">
+              <i class="fa fa-pencil-alt fa-lg"></i>
+            </span>
+            <span class="profile__action-title">Edit Profile</span>
+          </div>
         </div>
       </div>
     </main>
